# revenue-manager-agent

./: .env.example  .gitignore  ARCHITECTURE.md  ATTESTATION.md  README.md  langgraph.json  pyproject.toml  render.yaml  requirements-server.txt  requirements.txt  schema.sql
agent/: graph.py  index.html  prompts.py  server.py
etl/: LOAD_PROOF.json  SCRAPE_MANIFEST.json  explore.py  load.py  run_etl.py  scrape.py  transform.py
scripts/: compute_load_fingerprint.py  load_neon.py  load_neon_http.py  smoke_agent.py
skills/: CHALLENGE_SKILL.md
skills/grain-and-filter-guardrails/: SKILL.md
skills/group-block-concentration/: SKILL.md
skills/ota-dependency/: SKILL.md
skills/otb-summary/: SKILL.md
skills/pickup-pace/: SKILL.md
skills/point-in-time-otb/: SKILL.md
skills/segment-mix/: SKILL.md
sql/: views.sql
tests/: conftest.py  test_agent.py  test_etl.py  test_skills.py  test_tools.py
tests/fixtures/: composite_trace.json
tools/: METRIC_DEFINITIONS.md  db.py  metrics.py
